--- a/src/components/common/loader.css
+++ b/src/components/common/loader.css
@@ -56,8 +56,7 @@
   transform: rotateX(90deg)
     translate3d(0, 0, calc((var(--size) * (var(--coefficient) * -0.5)) - 1px))
     scale(0.96);
-  animation:
-    squish-squosh var(--timeline) var(--delay) infinite,
+  animation: squish-squosh var(--timeline) var(--delay) infinite,
     fade var(--timeline) var(--delay) infinite;
   background: black;
 }
