--- a/src/index.css
+++ b/src/index.css
@@ -95,3 +95,20 @@ input[type="date"] {
 .animate-slide {
   animation: slide 0.3s forwards;
 }
+
+.css-1dune0f-MuiInputBase-input-MuiOutlinedInput-input {
+  padding: 8px 0px 8px 8px !important;
+}
+.css-jupps9-MuiInputBase-root-MuiOutlinedInput-root {
+  border-radius: 8px !important;
+  padding-right: 8px !important;
+}
+.css-19qnlrw-MuiFormLabel-root-MuiInputLabel-root {
+  top: -8px !important;
+}
+.css-oeq6yz-MuiButtonBase-root-MuiIconButton-root {
+  padding-left: 0px !important;
+}
+.css-elo8k2-MuiInputAdornment-root {
+  margin-left: 0px !important;
+}
